--- a/vim/.vimrc.custom.config
+++ b/vim/.vimrc.custom.config
@@ -15,6 +15,42 @@
 " indentLine 开启代码对齐线
 " let g:indentLine_enabled = 1
 
+inoremap jk <ESC>
+
+" Leaderf 模糊查询
+nnoremap <leader>f :LeaderfFile <cr>
+
+" Easymotion
+map / <Plug>(easymotion-sn)
+map / <Plug>(easymotion-tn)
+map n <Plug>(easymotion-next)
+map N <Plug>(easymotion-prev)
+
+" Netrw VIM自带的目录管理 :Ve :Ex :He
+let g:netrw_hide = 1 "设置默认隐藏
+let g:netrw_liststyle = 3 " tree 模式显示风格
+let g:netrw_banner = 0 " 显示帮助信息
+let g:netrw_browse_split = 0 "控制 <CR> 直接在当前窗口打开光标下文件
+let g:netrw_winsize = 30 " 占用宽度
+let g:netrw_list_hide= '\(^\|\s\s\)\zs\.\S\+' " 需要隐藏的文件
+let g:netrw_localrmdir = 'trash' "默认的删除工具使用 trash
+let g:netrw_altv = 1 " 控制 v 分裂的窗口位于右边
+let g:netrw_preview = 1 " 默认是水平分割, 此项设置使之垂直分割
+let g:netrw_alto = 0 " 控制预览窗口位于左侧或右侧, 与 netrw_preview 共同作用
+" let g:netrw_chgwin = 2 " 控制按下 <CR> 的新文件在位于屏幕右侧的 2 号窗口打开, Lex 默认会设为 2
+
+
+" MarkdownPreview
+map <F4> :MarkdownPreview<CR> "设置 F3 开启 Markdown 文件预览
+let g:mkdp_auto_start = 0 "打开文件后自动弹出, 0 为否
+let g:mkdp_auto_close = 1 "关闭文件后自动关闭预览窗口, 1 为是
+let g:mkdp_refresh_slow = 1 "慢速预览, 修改后退出 insert 模式后方会刷新视图, 1 为是
+let g:mkdp_open_to_the_world = 0 "开启公网链接, 0 为否
+let g:mkdp_browser = '' "指定浏览器, 默认会跟随系统浏览器
+let g:mkdp_port = '' " 指定端口, 默认随机端口
+let g:mkdp_page_title = '「${name}」' "指定浏览器窗口标题, 默认为 Markdown 文件名
+
+
 " markdown
 " let system = system('uname -s')
 " if system == "Darwin\n"
