--- a/vim/.vimrc.custom.config
+++ b/vim/.vimrc.custom.config
@@ -19,6 +19,8 @@ inoremap jk <ESC>
 
 " Leaderf 模糊查询
 nnoremap <leader>f :LeaderfFile <cr>
+let g:Lf_WindowPosition = 'popup'
+let g:Lf_PreviewInPopup = 1
 
 " Easymotion
 map / <Plug>(easymotion-sn)
