--- a/i3/.i3/config
+++ b/i3/.i3/config
@@ -167,9 +167,9 @@ set $ws1 1
 set $ws2 2
 set $ws3 3
 set $ws4 4
-set $ws5 5
-set $ws6 6
-set $ws7 7
+set $ws5 BW
+set $ws6 ITP
+set $ws7 Firefox
 set $ws8 Mail 
 
 # switch to workspace
@@ -199,6 +199,7 @@ bindsym $mod+Shift+8 move container to workspace $ws8; workspace $ws8
 # assign [class="Pale moon"] $ws2
 # assign [class="Pcmanfm"] $ws3
 # assign [class="Skype"] $ws5
+assign [class="firefox"] $ws7
 
 # Open specific applications in floating mode
 for_window [title="alsamixer"] floating enable border pixel 1
