--- a/vim/.vimrc.custom.config
+++ b/vim/.vimrc.custom.config
@@ -17,8 +17,12 @@
 
 inoremap jk <ESC>
 
+" open buffer in new tab to edit
+nnoremap tt :tab split<CR>
+
 " Leaderf 模糊查询
-nnoremap <leader>f :LeaderfFile <cr>
+nnoremap <leader>f :LeaderfFile<cr>
+
 let g:Lf_WindowPosition = 'popup'
 let g:Lf_PreviewInPopup = 1
 
