--- a/vim/.vimrc.custom.config
+++ b/vim/.vimrc.custom.config
@@ -15,6 +15,7 @@
 " indentLine 开启代码对齐线
 " let g:indentLine_enabled = 1
 
+command W :execute ':silent w !sudo tee % > /dev/null' 
 inoremap jk <ESC>
 
 " Leaderf 模糊查询
