--- a/vim/.vimrc.custom.config
+++ b/vim/.vimrc.custom.config
@@ -3,6 +3,10 @@
 " 用户自定义配置（该文件放一般性配置，可覆盖~/.vimrc里的配置，若要增加、卸载插件，请放入~/.vimrc.custom.plugins）
 """""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
 
+set tabstop=2            " 设置编辑时制表符占用空格数
+set softtabstop=2
+set shiftwidth=2         " 设置格式化时制表符占用空格数
+
 " 开启相对行号
 " set relativenumber  
 
