--- a/i3/.i3/config
+++ b/i3/.i3/config
@@ -87,7 +87,7 @@ bindsym $mod+8 workspace $ws8
 bindsym $mod+9 exec --no-startup-id blurlock
 
 bindsym $mod+a focus parent
-bindsym $mod+w kill
+bindsym $mod+q kill
 bindsym $mod+e exec nemo
 bindsym $mod+f fullscreen toggle
 bindsym $mod+r mode "resize"
@@ -97,7 +97,7 @@ bindsym $mod+slash exec xfce4-terminal --drop-down
 # split orientation
 bindsym $mod+h split h;exec notify-send 'tile horizontally'
 bindsym $mod+v split v;exec notify-send 'tile vertically'
-bindsym $mod+q split toggle
+#bindsym $mod+q split toggle
 
 # change focus between tiling / floating windows
 bindsym $mod+space focus mode_toggle
