--- a/npm/.npmrc
+++ b/npm/.npmrc
@@ -1,2 +1,6 @@
+phantomjs_cdnurl=https://npm.taobao.org/mirrors/phantomjs/
+#electron_mirror=https://npm.taobao.org/mirrors/electron/
 registry=https://registry.npm.taobao.org/
+strict-ssl=false
 unsafe-perm=true
+ELECTRON_MIRROR=https://cdn.npm.taobao.org/dist/electron/
