--- a/npm/.npmrc
+++ b/npm/.npmrc
@@ -1,6 +1,10 @@
 phantomjs_cdnurl=https://npm.taobao.org/mirrors/phantomjs/
-#electron_mirror=https://npm.taobao.org/mirrors/electron/
-registry=https://registry.npm.taobao.org/
+electron_mirror=https://npmmirror.com/mirrors/electron/
+ELECTRON_BUILDER_BINARIES_MIRROR=http://npm.taobao.org/mirrors/electron-builder-binaries/
 strict-ssl=false
 unsafe-perm=true
 ELECTRON_MIRROR=https://cdn.npm.taobao.org/dist/electron/
+ELECTRON_CUSTOM_DIR=v{{ version }}
+registry=https://registry.npmmirror.com/
+//packages.aliyun.com/5f967c87728df4b180fad5b0/npm/npm-registry/:_authToken=1d997892-ad66-47da-86b9-0781244fd512
+home=https://npm.taobao.org
