--- a/vim/.vimrc.custom.config
+++ b/vim/.vimrc.custom.config
@@ -2,7 +2,6 @@
 """""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
 " 用户自定义配置（该文件放一般性配置，可覆盖~/.vimrc里的配置，若要增加、卸载插件，请放入~/.vimrc.custom.plugins）
 """""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
-
 set tabstop=2            " 设置编辑时制表符占用空格数
 set softtabstop=2
 set shiftwidth=2         " 设置格式化时制表符占用空格数
@@ -14,7 +13,7 @@ set shiftwidth=2         " 设置格式化时制表符占用空格数
 " set mouse=a
 
 " 设置光标所在列高亮
-" set cursorcolumn
+set cursorcolumn
 
 " indentLine 开启代码对齐线
 " let g:indentLine_enabled = 1
@@ -107,3 +106,19 @@ let g:mkdp_open_to_the_world = 0 "开启公网链接, 0 为否
 let g:mkdp_browser = '' "指定浏览器, 默认会跟随系统浏览器
 let g:mkdp_port = '' " 指定端口, 默认随机端口
 let g:mkdp_page_title = '「${name}」' "指定浏览器窗口标题, 默认为 Markdown 文件名
+
+" Buffer
+nmap <S-Tab> :bprev<cr>
+nmap <Tab> :bnext<cr>
+
+" airline
+let g:airline#extensions#tabline#buffer_idx_mode = 1
+nmap <leader>1 <Plug>AirlineSelectTab1
+nmap <leader>2 <Plug>AirlineSelectTab2
+nmap <leader>3 <Plug>AirlineSelectTab3
+nmap <leader>4 <Plug>AirlineSelectTab4
+nmap <leader>5 <Plug>AirlineSelectTab5
+nmap <leader>6 <Plug>AirlineSelectTab6
+nmap <leader>7 <Plug>AirlineSelectTab7
+nmap <leader>8 <Plug>AirlineSelectTab8
+nmap <leader>9 <Plug>AirlineSelectTab9
