--- a/vim/.vimrc.custom.config
+++ b/vim/.vimrc.custom.config
@@ -12,8 +12,11 @@ set shiftwidth=2         " 设置格式化时制表符占用空格数
 " 开启鼠标
 " set mouse=a
 
+color gruvbox
+
 " 设置光标所在列高亮
 set cursorcolumn
+set cursorline
 
 " indentLine 开启代码对齐线
 " let g:indentLine_enabled = 1
@@ -110,6 +113,9 @@ let g:mkdp_page_title = '「${name}」' "指定浏览器窗口标题, 默认为 
 " Buffer
 nmap <S-Tab> :bprev<cr>
 nmap <Tab> :bnext<cr>
+
+" vertical create a split with existing buffer
+nnoremap <leader>vb :ls<cr>:vertical sb<space>
 
 " airline
 let g:airline#extensions#tabline#buffer_idx_mode = 1
