--- a/ranger/.config/ranger/rc_origin.conf
+++ b/ranger/.config/ranger/rc_origin.conf
@@ -57,7 +57,7 @@ set automatically_count_files true
 set open_all_images true
 
 # Be aware of version control systems and display information.
-set vcs_aware true
+set vcs_aware false
 
 # State of the four backends git, hg, bzr, svn. The possible states are
 # disabled, local (only show local info), enabled (show local and remote
@@ -67,8 +67,11 @@ set vcs_backend_hg disabled
 set vcs_backend_bzr disabled
 set vcs_backend_svn disabled
 
+# Truncate the long commit messages to this length when shown in the statusbar.
+set vcs_msg_length 50
+
 # Use one of the supported image preview protocols
-set preview_images true
+set preview_images false
 
 # Set the preview image method. Supported methods:
 #
@@ -106,11 +109,19 @@ set preview_images true
 #   while slower, this allows remote previews,
 #   for example during an ssh session.
 #   Tmux is unsupported.
-set preview_images_method iterm2
+#
+# * ueberzug:
+#   Preview images in full color with the external command "ueberzug".
+#   Images are shown by using a child window.
+#   Only for users who run X11 in GNU/Linux.
+set preview_images_method w3m
 
 # Delay in seconds before displaying an image with the w3m method.
 # Increase it in case of experiencing display corruption.
 set w3m_delay 0.02
+
+# Manually adjust the w3mimg offset when using a terminal which needs this
+set w3m_offset 0
 
 # Default iTerm2 font size (see: preview_images_method: iterm2)
 set iterm2_font_width 8
@@ -134,7 +145,10 @@ set colorscheme default
 # And collapse (shrink) the last column if there is nothing to preview?
 set preview_files true
 set preview_directories true
-set collapse_preview false
+set collapse_preview true
+
+# Wrap long lines in plain text previews?
+set wrap_plaintext_previews false
 
 # Save the console history on exit?
 set save_console_history true
@@ -150,7 +164,7 @@ set draw_progress_bar_in_status_bar true
 # Separators are vertical lines between columns.
 # Outline draws a box around all the columns.
 # Both combines the two.
-set draw_borders both
+set draw_borders none
 
 # Display the directory name in tabs?
 set dirname_in_tabs false
@@ -168,10 +182,10 @@ set display_free_space_in_status_bar true
 # Display files tags in all columns or only in main column?
 set display_tags_in_all_columns true
 
-# Set a title for the window?
+# Set a title for the window? Updates both `WM_NAME` and `WM_ICON_NAME`
 set update_title false
 
-# Set the title to "ranger" in the tmux program?
+# Set the tmux/screen window-name to "ranger"?
 set update_tmux_title true
 
 # Shorten the title if it gets long?  The number defines how many
@@ -290,6 +304,14 @@ set global_inode_type_filter
 # should be 'false' during start-up, but you can toggle it by pressing F.
 set freeze_files false
 
+# Print file sizes in bytes instead of the default human-readable format.
+set size_in_bytes false
+
+# Warn at startup if RANGER_LEVEL env var is greater than 0, in other words
+# give a warning when you nest ranger in a subshell started by ranger.
+# Special value "error" makes the warning more visible.
+set nested_ranger_warning true
+
 # ===================================================================
 # == Local Options
 # ===================================================================
@@ -337,6 +359,8 @@ map <esc> change_mode normal
 map ~ set viewmode!
 
 map i display_file
+map <A-j> scroll_preview 1
+map <A-k> scroll_preview -1
 map ? help
 map W display_log
 map w taskview_open
@@ -345,22 +369,23 @@ map S shell $SHELL
 map :  console
 map ;  console
 map !  console shell%space
-map @  console -p6 shell %%s
+map @  console -p6 shell  %%s
 map #  console shell -p%space
 map s  console shell%space
-map r  chain draw_possible_programs; console open_with%%space
+map r  chain draw_possible_programs; console open_with%space
 map f  console find%space
 map cd console cd%space
 
 map <C-p> chain console; eval fm.ui.console.history_move(-1)
 
-
 # Change the line mode
 map Mf linemode filename
 map Mi linemode fileinfo
 map Mm linemode mtime
+map Mh linemode humanreadablemtime
 map Mp linemode permissions
 map Ms linemode sizemtime
+map MH linemode sizehumanreadablemtime
 map Mt linemode metatitle
 
 # Tagging / Marking
@@ -382,6 +407,7 @@ map <F5> copy
 map <F6> cut
 map <F7> console mkdir%space
 map <F8> console delete
+#map <F8> console trash
 map <F10> exit
 
 # In case you work on a keyboard with dvorak layout
@@ -421,36 +447,40 @@ map }     traverse
 map {     traverse_backwards
 map )     jump_non
 
-map gr cd /
-map g/ cd /
 map gh cd ~
+map ge cd /etc
+map gu cd /usr
+map gd cd /dev
 map gl cd -r .
 map gL cd -r %f
+map go cd /opt
+map gv cd /var
+map gm cd /media
 map gi eval fm.cd('/run/media/' + os.getenv('USER'))
+map gM cd /mnt
+map gs cd /srv
 map gp cd /tmp
+map gr cd /
 map gR eval fm.cd(ranger.RANGERDIR)
+map g/ cd /
 map g? cd /usr/share/doc/ranger
 
 # External Programs
 map E  edit
-# map du shell -p du --max-depth=1 -h --apparent-size # linux 
-# map dU shell -p du --max-depth=1 -h --apparent-size | sort -rh #linux
-map du shell -p du -d 1 -h 
-map dU shell -p du -d 1 -h | sort -rh
+map du shell -p du --max-depth=1 -h --apparent-size
+map dU shell -p du --max-depth=1 -h --apparent-size | sort -rh
 map yp yank path
 map yd yank dir
 map yn yank name
 map y. yank name_without_extension
 
 # Filesystem Operations
-map = console chmod%space
+map =  chmod
 
-#map cw console rename%space
-map cw eval fm.execute_console("bulkrename") if fm.thisdir.marked_items else fm.open_console("rename")
+map cw console rename%space
 map a  rename_append
 map A  eval fm.open_console('rename ' + fm.thisfile.relative_path.replace("%", "%%"))
 map I  eval fm.open_console('rename ' + fm.thisfile.relative_path.replace("%", "%%"), position=7)
-#map f console scout -ftsea%space
 
 map pp paste
 map po paste overwrite=True
@@ -460,8 +490,12 @@ map pl paste_symlink relative=False
 map pL paste_symlink relative=True
 map phl paste_hardlink
 map pht paste_hardlinked_subtree
+map pd console paste dest=
+map p`<any> paste dest=%any_path
+map p'<any> paste dest=%any_path
 
 map dD console delete
+map dT console trash
 
 map dd cut
 map ud uncut
@@ -562,15 +596,18 @@ map zf    console filter%space
 copymap zf zz
 
 # Filter stack
-map .n console filter_stack add name%space
-map .m console filter_stack add mime%space
 map .d filter_stack add type d
 map .f filter_stack add type f
 map .l filter_stack add type l
+map .m console filter_stack add mime%space
+map .n console filter_stack add name%space
+map .# console filter_stack add hash%space
+map ." filter_stack add duplicate
+map .' filter_stack add unique
 map .| filter_stack add or
 map .& filter_stack add and
 map .! filter_stack add not
-map .r console filter_stack rotate
+map .r filter_stack rotate
 map .c filter_stack clear
 map .* filter_stack decompose
 map .p filter_stack pop
@@ -720,18 +757,3 @@ tmap <delete>   eval -q fm.ui.taskview.task_remove()
 tmap <C-l> redraw_window
 tmap <ESC> taskview_close
 copytmap <ESC> q Q w <C-c>
-
-# --- custom
-# map DD shell mv %s /home/${USER}/share/Trash/files/ #Linux
-map DD shell mv %s ${HOME}/.Trash/
-map vv console shell vim%space
-map vc console shell vim ~/.config/ranger/rc.conf
-map gd cd ~/Downloads
-map gD cd ~/Desktop
-map ga cd ~/.apps
-map gA cd ~/.local/applications
-map gc cd ~/.config
-map gC cd ~/.conf
-map gm cd ~/UBR/coding.net/ubr-fe/mp-ubr/src
-map gp cd ~/UBR/coding.net/ubr-fe/
-map gP cd ~/UBR/
