--- a/ranger/.config/ranger/rc.conf
+++ b/ranger/.config/ranger/rc.conf
@@ -106,7 +106,7 @@ set preview_images true
 #   while slower, this allows remote previews,
 #   for example during an ssh session.
 #   Tmux is unsupported.
-set preview_images_method iterm2
+set preview_images_method kitty
 
 # Delay in seconds before displaying an image with the w3m method.
 # Increase it in case of experiencing display corruption.
@@ -723,7 +723,8 @@ copytmap <ESC> q Q w <C-c>
 
 # --- custom
 # map DD shell mv %s /home/${USER}/share/Trash/files/ #Linux
-map DD shell mv %s ${HOME}/.Trash/
+# map DD shell mv %s ${HOME}/.Trash/
+map DD shell gio trash %s
 map vv console shell vim%space
 map vc console shell vim ~/.config/ranger/rc.conf
 map gd cd ~/Downloads
