feat: add fzf conf

--- a/ranger/.config/ranger/rc.conf
+++ b/ranger/.config/ranger/rc.conf
@@ -28,7 +28,7 @@ set viewmode miller
 #set viewmode multipane
 
 # How many columns are there, and what are their relative widths?
-set column_ratios 1,3,4
+set column_ratios 2,3,4
 
 # Which files should be hidden? (regular expression)
 set hidden_filter ^\.|\.(?:pyc|pyo|bak|swp)$|^lost\+found$|^__(py)?cache__$
@@ -67,7 +67,7 @@ set vcs_backend_hg disabled
 set vcs_backend_bzr disabled
 set vcs_backend_svn disabled
 
-# Use one of the supported image preview protocols
+#cat替代 Use one of the supported image preview protocols
 set preview_images true
 
 # Set the preview image method. Supported methods:
@@ -348,8 +348,8 @@ map !  console shell%space
 map @  console -p6 shell %%s
 map #  console shell -p%space
 map s  console shell%space
-map r  chain draw_possible_programs; console open_with%%space
-map f  console find%space
+map r  chain draw_possible_programs; console open_with%space
+# map f  console find%space
 map cd console cd%space
 
 map <C-p> chain console; eval fm.ui.console.history_move(-1)
@@ -452,6 +452,8 @@ map A  eval fm.open_console('rename ' + fm.thisfile.relative_path.replace("%", "
 map I  eval fm.open_console('rename ' + fm.thisfile.relative_path.replace("%", "%%"), position=7)
 #map f console scout -ftsea%space
 
+map <C-f>  console find%space
+
 map pp paste
 map po paste overwrite=True
 map pP paste append=True
@@ -462,7 +464,6 @@ map phl paste_hardlink
 map pht paste_hardlinked_subtree
 
 map dD console delete
-
 map dd cut
 map ud uncut
 map da cut mode=add
@@ -721,18 +722,28 @@ tmap <C-l> redraw_window
 tmap <ESC> taskview_close
 copytmap <ESC> q Q w <C-c>
 
-# --- custom
+# --- custom key bindings
+# 为了让两个ranger实例可以相互复制粘贴文件，增加yB和pB
+map yB chain copy;save_copy_buffer
+map pB chain load_copy_buffer;paste
+
 # map DD shell mv %s /home/${USER}/share/Trash/files/ #Linux
-# map DD shell mv %s ${HOME}/.Trash/
-map DD shell gio trash %s
+map DD shell mv %s ${HOME}/.Trash/
+map xX shell mv %s ${HOME}/.Trash/
+#map DD shell gio trash %s
+
+map <C-v> mark_files all=True toggle=True
+map f fzf_select
+map vf shell vim `fzf`
 map vv console shell vim%space
-map vc console shell vim ~/.config/ranger/rc.conf
-map gd cd ~/Downloads
+map vc shell vim ~/.config/ranger/rc.conf
+
+map gDD cd ~/Downloads
 map gD cd ~/Desktop
-map ga cd ~/.apps
-map gA cd ~/.local/applications
-map gc cd ~/.config
-map gC cd ~/.conf
+map gC cd ~/.config
 map gm cd ~/UBR/coding.net/ubr-fe/mp-ubr/src
 map gp cd ~/UBR/coding.net/ubr-fe/
 map gP cd ~/UBR/
+
+# git clone https://github.com/alexanderjeurissen/ranger_devicons ~/.config/ranger/plugins/ranger_devicons
+default_linemode devicons
