--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -10,8 +10,8 @@
 # bold_font        auto
 # italic_font      auto
 # bold_italic_font auto
-font_family   FiraCode-Bold
-#font_family     DroidSansMonoNerdFontComplete-
+# font_family   FiraCode-Bold
+font_family     DroidSansMonoNerdFontComplete-
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
