--- a/vim/.vimrc.custom.config
+++ b/vim/.vimrc.custom.config
@@ -84,7 +84,8 @@ let g:mkdp_browser = '' "指定浏览器, 默认会跟随系统浏览器
 let g:mkdp_port = '' " 指定端口, 默认随机端口
 let g:mkdp_page_title = '「${name}」' "指定浏览器窗口标题, 默认为 Markdown 文件名
 
-
+"lazygit
+noremap <c-g> :tabe<CR>:-tabmove<CR>:term lazygit<CR>
 
 " Buffer
 nmap <S-Tab> :bprev<cr>
