--- a/ranger/.config/ranger/rc.conf
+++ b/ranger/.config/ranger/rc.conf
@@ -345,9 +345,9 @@ map S shell $SHELL
 map :  console
 map ;  console
 map !  console shell%space
-map @  console -p6 shell %%s
+#map @  console -p6 shell %%s
 map #  console shell -p%space
-map s  console shell%space
+#map s  console shell%space
 map r  chain draw_possible_programs; console open_with%space
 # map f  console find%space
 map cd console cd%space
@@ -369,6 +369,7 @@ map ut      tag_remove
 map "<any>  tag_toggle tag=%any
 map <Space> mark_files toggle=True
 map v       mark_files all=True toggle=True
+map va      mark_files all=True toggle=True
 map uv      mark_files all=True val=False
 map V       toggle_visual_mode
 map uV      toggle_visual_mode reverse=True
@@ -732,11 +733,16 @@ map DD shell mv %s ${HOME}/.Trash/
 map xX shell mv %s ${HOME}/.Trash/
 #map DD shell gio trash %s
 
+map T   tab_new
+map W   tab_close
+map bb  bulkrename
+
 map <C-v> mark_files all=True toggle=True
-map f fzf_select
+map F fzf_select
 map vf shell vim `fzf`
 map vv console shell vim%space
 map vc shell vim ~/.config/ranger/rc.conf
+map <C-g> shell lazygit
 
 map gDD cd ~/Downloads
 map gD cd ~/Desktop
